[tool.black]
line_length = 94

[tool.isort]
line_length = 94
profile = "black"
known_third_party = ["vivarium"]
multi_line_output = 3 # Vertical Hanging Indent, see https://pypi.org/project/isort/

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests/"]

[tool.coverage.run]
source = ["vivarium_cluster_tools"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
# This is the global mypy configuration.
strict = true  # See all the enabled flags `mypy --help | grep -A 10 'Strict mode'`
disallow_any_unimported = false
implicit_reexport = true
exclude = [
    "build",
    # Files below here should have their errors fixed and then be removed from this list
    # You will need to remove the mypy: ignore-errors comment from the file heading as well
    "src/vivarium_cluster_tools/psimulate/branches.py",
    "src/vivarium_cluster_tools/psimulate/cli.py",
    "src/vivarium_cluster_tools/psimulate/jobs.py",
    "src/vivarium_cluster_tools/psimulate/paths.py",
    "src/vivarium_cluster_tools/psimulate/performance_logger.py",
    "src/vivarium_cluster_tools/psimulate/pip_env.py",
    "src/vivarium_cluster_tools/psimulate/runner.py",
    "src/vivarium_cluster_tools/vipin/cli.py",
    "src/vivarium_cluster_tools/vipin/perf_counters.py",
    "tests/psimulate/cluster/test_interface.py",
    "tests/psimulate/redis_dbs/test_registry.py",
    "tests/psimulate/results/test_processing.py",
    "tests/psimulate/worker/test_logging.py",
    "tests/psimulate/worker/test_vivarium_work_horse.py",
    "tests/psimulate/test_appending_perf_logs.py",
    "tests/psimulate/test_branches.py",
    "tests/psimulate/test_runner.py",
]

disable_error_code = []

# handle mypy errors when 3rd party packages are not typed.
[[tool.mypy.overrides]]
module = ["drmaa", "requests"]
ignore_missing_imports = true