[tool.black]
line_length = 94

[tool.isort]
line_length = 94
profile = "black"
known_third_party = ["vivarium"]
multi_line_output = 3 # Vertical Hanging Indent, see https://pypi.org/project/isort/

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests/"]

[tool.coverage.run]
source = ["vivarium_cluster_tools"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
# This is the global mypy configuration.
strict = true  # See all the enabled flags `mypy --help | grep -A 10 'Strict mode'`
disallow_any_unimported = false
implicit_reexport = true
exclude = [
    "build",
    # Files below here should have their errors fixed and then be removed from this list
    # You will need to remove the mypy: ignore-errors comment from the file heading as well
    "src/vivarium_cluster_tools/psimulate/redis_dbs/launcher.py",
    "src/vivarium_cluster_tools/psimulate/redis_dbs/registry.py",
    "tests/psimulate/redis_dbs/test_registry.py",
    "src/vivarium_cluster_tools/psimulate/worker/core.py",
    "tests/psimulate/worker/test_logging.py",
    "src/vivarium_cluster_tools/psimulate/cluster/interface.py",
    "tests/psimulate/cluster/test_interface.py",
    "src/vivarium_cluster_tools/psimulate/worker/load_test_work_horse.py",
    "src/vivarium_cluster_tools/psimulate/worker/vivarium_work_horse.py",
    "tests/psimulate/worker/test_vivarium_work_horse.py",
    "src/vivarium_cluster_tools/psimulate/runner.py",
    "tests/psimulate/test_runner.py",
    "src/vivarium_cluster_tools/psimulate/cli.py",
    "src/vivarium_cluster_tools/vipin/cli.py",
    "tests/psimulate/results/test_processing.py"
]

disable_error_code = []

# handle mypy errors when 3rd party packages are not typed.
[[tool.mypy.overrides]]
module = ["drmaa"]
ignore_missing_imports = true